--- a/src/Components/Body/Section/Section.css
+++ b/src/Components/Body/Section/Section.css
@@ -5,9 +5,23 @@
     display: flex;
     align-items: center;
     padding: 50px;
+    height: 500px;
     
-     
+ 
 }
+
+.titleSection{
+    margin-bottom: 60px;
+    font-size: 30px;
+    
+}
+
+
+
+
+
+
+
 
 .containerImage{
    background-color: transparent;
@@ -33,10 +47,21 @@
     width: 50%;
     padding: 50px;
     background-position: 50%;
+    animation: iniciate .5s;
     
     
 }
 
+@keyframes iniciate{
+    from{
+            opacity: 0;
+            transform: translate3d(0, -10px, 0);
+    }
+    to{
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+  }
 
 
 
