--- a/src/Components/Header/SocialMedia/SocialMedia.css
+++ b/src/Components/Header/SocialMedia/SocialMedia.css
@@ -12,13 +12,20 @@ cursor: pointer;
 }
 
 
+@media screen and (max-width: 360px) {
+   
+
+}
+
+
 
 @media screen and (max-width: 768px) {
 
    .imgSocialMedia{
-      width: 40px;
+      width: 10%;
       margin: 10px;
       min-width: 20px;
+      
    }
    
    
